// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Container config should set product configuration: default sort for inventory should descend 1`] = `
Object {
  "hostsInventory": true,
  "subscriptionsInventory": true,
}
`;

exports[`Product OpenShift Container config should set product configuration: filteredInventoryData results 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <React.Fragment>
        lorem
         
        
      </React.Fragment>,
    },
    Object {
      "title": "",
    },
    Object {
      "title": "",
    },
    Object {
      "title": <DateFormat
        date="lorem date obj"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "coreHours": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"coreHours\\"})",
      "value": 12.53,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
  },
}
`;

exports[`Product OpenShift Container config should set product configuration: filteredInventoryData results, fallback display 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "",
    },
    Object {
      "title": "",
    },
    [Function],
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"sockets_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"cores_OpenShift Container Platform\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "coreHours": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"coreHours\\"})",
      "value": null,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": null,
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": null,
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
  },
}
`;

exports[`Product OpenShift Container config should set product configuration: initial configuration 1`] = `
Object {
  "initialGraphFilters": Array [
    Object {
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "cores",
      "isOptional": true,
      "stroke": "#06c",
    },
    Object {
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "sockets",
      "isOptional": true,
      "stroke": "#06c",
    },
    Object {
      "id": "thresholdSockets",
      "isOptional": true,
    },
    Object {
      "id": "thresholdCores",
      "isOptional": true,
    },
  ],
  "initialInventoryFilters": Array [
    Object {
      "cell": [Function],
      "id": "displayName",
      "isSortable": true,
    },
    Object {
      "cellWidth": 15,
      "header": "t(curiosity-inventory.header, {\\"context\\":\\"sockets_OpenShift Container Platform\\"})",
      "id": "sockets",
      "isOptional": true,
      "isSortable": true,
      "isWrappable": true,
    },
    Object {
      "cellWidth": 15,
      "header": "t(curiosity-inventory.header, {\\"context\\":\\"cores_OpenShift Container Platform\\"})",
      "id": "cores",
      "isOptional": true,
      "isSortable": true,
      "isWrappable": true,
    },
    Object {
      "cell": [Function],
      "cellWidth": 25,
      "id": "lastSeen",
      "isSortable": true,
      "isWrappable": true,
    },
  ],
  "query": Object {
    "beginning": "2019-06-20T00:00:00.000Z",
    "ending": "2019-07-20T23:59:59.999Z",
    "uom": "cores",
  },
}
`;
